Spring Boot Board

--- a/spring/boot/SpringBootBoard/src/main/resources/templates/board/list.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/board/list.html
@@ -18,6 +18,8 @@
     </div>
     <div class="card-body">
 
+      <div th:text="${listPage}"></div>
+
       <table class="table  table-bordered text-center">
         <thead class="bg-primary text-white">
           <tr>
