--- a/spring/boot/SpringBootBoard/src/main/resources/templates/board/list.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/board/list.html
@@ -39,6 +39,7 @@
 
       </table>
 
+      <!--페이징 시작-->
       <nav aria-label="">
         <ul class="pagination">
 
@@ -50,8 +51,8 @@
 
 
 
-          <th:block th:each="num : ${#numbers.sequence(listPage.startNum, listPage.endNum)}">
-          <li class="page-item">
+          <th:block th:each="num : ${#numbers.sequence(listPage.startNum, listPage.endNum)}" th:with="active=${listPage.pageNum==num?'active':''}">
+          <li class="page-item" th:classappend="${active}">
             <a class="page-link" th:href="@{/board/list(p=${num})}" th:text="${num}"></a>
           </li>
           </th:block>
@@ -73,6 +74,11 @@
 
         </ul>
       </nav>
+
+      <!--글쓰기 버튼-->
+      <div class="text-end">
+        <a href="/board/write" class="btn btn-primary">글쓰기</a>
+      </div>
 
     </div>
   </div>
