--- a/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
@@ -18,9 +18,6 @@
     </div>
     <div class="card-body">
 
-      <div th:text="${boardView}" ></div>
-      <div th:text="${currentPageNum}" ></div>
-
       <table class="table border-top-1" >
         <tr>
           <td class="col-2 text-center bg-light">제목</td>
@@ -37,7 +34,9 @@
         <tr>
           <td class="col-2 text-center bg-light">첨부사진</td>
           <td>
-            <img th:src="@{/upload/photo/{name}(name=${boardView.photo})}" >
+            <th:block th:if="${boardView.photo != null}">
+            <img th:src="@{/upload/photo/{name}(name=${boardView.photo})}" width="300">
+            </th:block>
           </td>
         </tr>
         <tr>
@@ -51,9 +50,27 @@
 
       </table>
 
+      <div class="text-end">
+        <a class="btn btn-warning" th:href="@{/board/edit(bno=${boardView.bno}, p=${currentPageNum})}">수정</a>
+        <a class="btn btn-danger" th:onclick="'deleteBoard('+${boardView.bno}+')'">삭제</a>
+        <a class="btn btn-primary" th:href="@{/board/list(p=${currentPageNum})}">리스트</a>
+      </div>
+
 
     </div>
   </div>
+
+  <script>
+
+    function deleteBoard(bno){
+
+      if(confirm("삭제하시겠습니까?")){
+          location.href = '/board/delete?bno='+bno;
+      }
+
+    }
+
+  </script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
