--- a/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
@@ -57,6 +57,47 @@
       </div>
 
 
+      <!-- 댓글 영역 시작 -->
+
+      <div class="card m-2 my-2">
+        <div class="card-header">
+          댓글
+        </div>
+        <div class="card-body">
+
+          <!--댓글 작성 영역-->
+
+
+          <!--댓글 리스트 영역-->
+          <table class="table">
+            <tbody id="replyList">
+              <tr>
+                <td>작성자</td>
+                <td>댓글 내용</td>
+                <td>작성일</td>
+                <td> 수정 | 삭제 </td>
+              </tr>
+              <tr>
+                <td>작성자</td>
+                <td>댓글 내용</td>
+                <td>작성일</td>
+                <td> 수정 | 삭제 </td>
+              </tr>
+              <tr>
+                <td>작성자</td>
+                <td>댓글 내용</td>
+                <td>작성일</td>
+                <td> 수정 | 삭제 </td>
+              </tr>
+            </tbody>
+          </table>
+
+
+
+        </div>
+      </div>
+
+
     </div>
   </div>
 
@@ -73,6 +114,37 @@
   </script>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+  <script th:inline="javascript">
+
+    var bno = [[${boardView.bno}]]
+
+  </script>
+
+  <script>
+
+    document.addEventListener('DOMContentLoaded', () => {
+
+      let replyList = document.querySelector('#replyList')
+
+      // 비동기 통신 :댓글 리스트
+      axios.get('/reply/'+bno)
+              .then(res =>{
+
+                console.log('response', res.data)
+
+              })
+              .catch(err => {
+                console.log(err)
+              })
+
+
+    })
+
+  </script>
+
+
 </body>
 </html>
