--- a/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
@@ -99,6 +99,37 @@
     </div>
   </div>
 
+
+  <!-- Modal -->
+  <div class="modal fade" id="replyEditModal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">댓글 수정</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="mb-3">
+            <label class="form-label">작성자</label>
+            <input type="text" class="form-control" id="ereplyer" readonly>
+            <input type="hidden" id="erno">
+            <input type="hidden" id="ereplydate">
+          </div>
+          <div class="mb-3">
+            <label class="form-label">내용</label>
+            <textarea class="form-control" rows="3" id="ereply"></textarea>
+          </div>
+        </div>
+        <div class="modal-footer">
+
+          <button type="button" id="btn_edit" class="btn btn-primary">수정</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
   <script>
 
     function deleteBoard(bno){
@@ -124,6 +155,7 @@
   <script>
 
     let replyList;
+    let editModal;
 
     document.addEventListener('DOMContentLoaded', () => {
 
@@ -133,51 +165,13 @@
       // 댓글 작성 버튼
       const btn_reply = document.querySelector("#btn_reply")
 
+      editModal = new bootstrap.Modal('#replyEditModal')
+
+
+
 
       // 버튼 이벤트 등록
-      btn_reply.addEventListener('click', () => {
-
-        // 서버로 전송할 payload
-        const payload = {
-          bno : bno,
-          reply : document.querySelector("#reply").value,
-          replyer : document.querySelector("#replyer").value
-        }
-
-        console.log("payload", payload)
-
-        axios.post('/reply', payload)
-                .then(res => {
-
-                  console.log('post->response', res.data)
-
-                  const reply = res.data
-
-                  // replyList 영역에 새로운 tr을 추가
-
-                  const newTR = document.createElement('tr')
-
-                  let html = '<td class="col-2">'+reply.replyer+'</td>'
-                  html += '<td class="col">'+reply.reply+'</td>'
-                  html += '<td class="col-2">'+reply.replydate+'</td>'
-                  html += '<td class="col-2"> ' +
-                          '<a href="javascript:showEditModal('+reply.rno+')" class="badge bg-warning text-decoration-none">수정</a> ' +
-                          '<a href="javascript:deleteReply('+reply.rno+')" class="badge bg-danger text-decoration-none">삭제</a> ' +
-                          '</td>'
-
-                  newTR.innerHTML=html
-                  newTR.setAttribute('class', 'fs-6 text-center')
-                  newTR.setAttribute('tr-index', reply.rno)
-
-                  // 부모 태그에 요소 추가
-                  replyList.appendChild(newTR)
-
-
-                })
-                .catch(err => console.log(err))
-
-
-      })
+      btn_reply.addEventListener('click', insertReply)
 
       // 페이지가 로드되면 리스트를 출력
       setList()
@@ -220,6 +214,84 @@
               .catch(err => {
                 console.log(err)
               })
+
+    }
+
+    function insertReply(){
+      // 서버로 전송할 payload
+      const payload = {
+        bno : bno,
+        reply : document.querySelector("#reply").value,
+        replyer : document.querySelector("#replyer").value
+      }
+
+      console.log("payload", payload)
+
+      axios.post('/reply', payload)
+              .then(res => {
+
+                console.log('post->response', res.data)
+
+                const reply = res.data
+
+                // replyList 영역에 새로운 tr을 추가
+
+                const newTR = document.createElement('tr')
+
+                let html = '<td class="col-2">'+reply.replyer+'</td>'
+                html += '<td class="col">'+reply.reply+'</td>'
+                html += '<td class="col-2">'+reply.replydate+'</td>'
+                html += '<td class="col-2"> ' +
+                        '<a href="javascript:showEditModal('+reply.rno+')" class="badge bg-warning text-decoration-none">수정</a> ' +
+                        '<a href="javascript:deleteReply('+reply.rno+')" class="badge bg-danger text-decoration-none">삭제</a> ' +
+                        '</td>'
+
+                newTR.innerHTML=html
+                newTR.setAttribute('class', 'fs-6 text-center')
+                newTR.setAttribute('tr-index', reply.rno)
+
+                // 부모 태그에 요소 추가
+                replyList.appendChild(newTR)
+
+                document.querySelector("#reply").value=''
+                document.querySelector("#replyer").value=''
+
+              })
+              .catch(err => console.log(err))
+    }
+
+    function deleteReply(rno){
+
+      if(!confirm('삭제하시겠습니까?')){
+        return;
+      }
+
+      console.log('rno >>> ', rno)
+
+      axios.delete('/reply/'+rno)
+              .then( res => {
+
+                console.log('delete - response => ', res.data)
+
+                if( res.data == 1){
+                  // 화면에서 tr-index == rno 행을삭제
+                  // 삭제 대상 행
+                  const delTR = document.querySelector('tr[tr-index="'+rno+'"]')
+                  replyList.removeChild(delTR)
+                  alert('삭제되었습니다.')
+                } else {
+                  alert('삭제할 대상이 존재하지 않습니다.')
+                }
+
+              })
+              .catch(err => console.log(err))
+
+    }
+
+
+    function showEditModal(rno){
+
+      editModal.show()
 
     }
 
