--- a/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
@@ -164,14 +164,15 @@
 
       // 댓글 작성 버튼
       const btn_reply = document.querySelector("#btn_reply")
+      // 댓글 수정 버튼
+      const btn_edit = document.querySelector('#btn_edit')
 
       editModal = new bootstrap.Modal('#replyEditModal')
 
 
-
-
       // 버튼 이벤트 등록
       btn_reply.addEventListener('click', insertReply)
+      btn_edit.addEventListener('click', editReply)
 
       // 페이지가 로드되면 리스트를 출력
       setList()
@@ -292,6 +293,54 @@
     function showEditModal(rno){
 
       editModal.show()
+
+      const editTD = document.querySelectorAll('tr[tr-index="'+rno+'"]>td')
+
+      //editTD[0].textContent='변경된 데이터'
+
+      console.log(editTD[0].textContent)
+      console.log(editTD[1].textContent)
+      console.log(editTD[2].textContent)
+
+
+      document.querySelector('#erno').value=rno
+      document.querySelector('#ereplyer').value=editTD[0].textContent
+      document.querySelector('#ereply').value=editTD[1].textContent
+      document.querySelector('#ereplydate').value=editTD[2].textContent
+
+
+
+
+
+    }
+
+    function editReply(){
+      // 서버로 전송할 payload
+      // put => 전체 데이터의 변경, 모든 데이터를 서버로 전송, 값이 없는 경우 기본값으로 저장
+      const payload = {
+        bno : bno,
+        rno : document.querySelector('#erno').value ,
+        reply : document.querySelector("#ereply").value,
+        replyer : document.querySelector("#ereplyer").value,
+        replydate : document.querySelector('#ereplydate').value
+      }
+
+      console.log(payload)
+
+      axios.put('/reply/'+payload.rno, payload)
+              .then( res => {
+                console.log('put -> response ',res.data)
+
+                const editTD = document.querySelectorAll('tr[tr-index="'+payload.rno+'"]>td')
+                editTD[1].textContent=payload.reply
+
+                editModal.hide()
+
+              })
+              .catch(err => console.log(err))
+
+
+
 
     }
 
