--- a/spring/boot/SpringBootBoard/src/main/resources/templates/board/edit.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/board/edit.html
@@ -30,7 +30,7 @@
         <div class="mb-3">
           <label for="writer" class="form-label">작성자</label>
           <input type="text" class="form-control" th:value="${board.writer.username}" readonly>
-          <input type="text" class="form-control" id="writer" name="writer" th:value="${board.writer.idx}">
+          <input type="hidden" class="form-control" id="writer" name="writer" th:value="${board.writer.idx}">
         </div>
         <div class="mb-3">
           <label for="content" class="form-label">내용</label>
