--- a/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
@@ -51,8 +51,11 @@
       </table>
 
       <div class="text-end">
+        <th:block th:if="${#authentication.principal.boardMember.idx} == ${boardView.writer.idx}">
         <a class="btn btn-warning" th:href="@{/board/edit(bno=${boardView.bno}, p=${currentPageNum})}">수정</a>
         <a class="btn btn-danger" th:onclick="'deleteBoard('+${boardView.bno}+')'">삭제</a>
+        </th:block>
+
         <a class="btn btn-primary" th:href="@{/board/list(p=${currentPageNum})}">리스트</a>
       </div>
 
@@ -71,7 +74,8 @@
             <h5 class="title my-2">댓글 작성</h5>
             <div class="mb-3">
               <label class="form-label">작성자</label>
-              <input type="text" class="form-control" id="replyer">
+              <input type="text" class="form-control" th:value="${#authentication.principal.boardMember.username}" readonly>
+              <input type="hidden" class="form-control" id="replyer" th:value="${#authentication.principal.boardMember.idx}" >
             </div>
             <div class="mb-3">
               <label class="form-label">내용</label>
@@ -111,7 +115,8 @@
         <div class="modal-body">
           <div class="mb-3">
             <label class="form-label">작성자</label>
-            <input type="text" class="form-control" id="ereplyer" readonly>
+            <input type="text" class="form-control" id="ereplyerName" readonly>
+            <input type="hidden" id="ereplyer" >
             <input type="hidden" id="erno">
             <input type="hidden" id="ereplydate">
           </div>
@@ -151,10 +156,11 @@
   <script th:inline="javascript">
 
     var bno = [[${boardView.bno}]]
+    var midx = [[${midx}]]
 
   </script>
 
-  <script src="/js/reply_default.js"></script>
+  <script src="/js/reply_jquery.js"></script>
 
 
 </body>
